k8s-files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
  namespace: budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: rln410/budget-app:v2
        ports:
        - containerPort: 3000
      volumes:
      - name: rails-config
        configMap:
          name: rails-config
---
apiVersion: v1
kind: Service
metadata:
  name: rails
  namespace: budget
spec:
  selector:
    app: rails
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
